# Android

./: README.md  build.gradle  settings.gradle
InjectClassPlugin/: build.gradle
InjectClassPlugin/src/main/: AndroidManifest.xml
InjectClassPlugin/src/main/groovy/com/example/injectclassplugin/: InjectClass.groovy  InjectClassExtension.groovy  InjectClassPlugin.groovy  InjectClassTransform.groovy
PrintDependency/: build.gradle
PrintDependency/src/main/groovy/: DependenciesPlugin.groovy  DependenciesPluginExtension.groovy
PrintDependency/src/main/java/com/example/printdependency/: ToolPlugin.java
app/: build.gradle
app/src/androidTest/java/com/example/renderplayground/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/backpack/: backpack.mtl
app/src/main/assets/hotfix/: fixBugClass.dex
app/src/main/assets/shaders/: DepthFS.glsl  DepthVS.glsl  GBufferFS.glsl  GBufferVS.glsl  LightingFS.glsl  QuadVS.glsl  RenderDepthFS.glsl  fsGBufferPLS.glsl  fsLightingPLS.glsl  fsResolvePLS.glsl  vsResolvePLS.glsl
app/src/main/cpp/: CMakeLists.txt  art_methods.h  jniImpl.cpp
app/src/main/cpp/DeferredShading/: DeferredShadingGBuffer.cpp  DeferredShadingGBuffer.h  ImageProcessNeon.cpp  Model3DSample.cpp  Model3DSample.h  RenderInterface.h  TriangleSample.h
app/src/main/cpp/RenderContext/: RenderContext.cpp  RenderContext.h
app/src/main/cpp/model/: mesh.cpp  model.cpp  shader.cpp  shader.h
app/src/main/cpp/sample/: Model3DSample.cpp  Model3DSample.h  SampleBaseGL.h  TriangleSample.cpp  TriangleSample.h
app/src/main/cpp/setAffinity/: setAffinity.cpp  setAffinity.h
app/src/main/cpp/util/: ImageDef.h  UtilGL.cpp  UtilGL.h  UtilLog.h
app/src/main/java/com/example/renderplayground/: BugClass.java  CommonUtils.java  FixDexJava.java  FixDexNative.java  MainActivity.java  NativeStructModel.java  RemoteService.java  RenderGL.java  RenderNative.java  Replace.java  SurfaceViewGL.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/renderplayground/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
